Project navigation arrows no longer display on mobile devices

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -23,3 +23,10 @@ i {
   }
 }
 
+@media only screen and (max-width: 768px) {
+  .glider-next, .glider-prev {
+    display: none;
+  }
+}
+
+
